# eval_card_backend_test

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: sync.yml
notes/: 01-schema-from-frontend.md  02-producer-shape.md
scripts/: audit_eee_records.py  ci_install_resolver.py  ci_publish_warehouse.py  refresh_eee_schema.py  smoke_warehouse.py
src/eval_card_backend/: __init__.py  categorisation.py  cli.py  config.py  entities.py  loaders.py  metric_meta_hotfix.py  pipeline.py  slugs.py
src/eval_card_backend/canonicalise/: __init__.py  cache.py  pipeline.py  resolver_setup.py  sidecars.py  slice_grouping.py  stages.py  taxonomy.py  thresholds.py  udfs.py
src/eval_card_backend/registry/: agentic_name_regex.json  category_mapping.json  completeness_fields.json  eee.schema.SOURCE.json  eee.schema.json
src/eval_card_backend/schemas/: __init__.py  eee_arrow.py  eee_types.py
src/eval_card_backend/signals/: __init__.py  comparability.py  completeness.py  reproducibility.py  setup.py
src/eval_card_backend/sources/: __init__.py  benchmark_cards.py  eee.py  registry.py
tests/: conftest.py  hierarchy_golden_allowlist.yaml  test_benchmark_cards.py  test_canonicalise_e2e.py  test_categorisation.py  test_comparison_index_schema.py  test_e2e_fixtures.py  test_e2e_slices.py  test_entities.py  test_hierarchy_golden.py  test_ignored_configs.py  test_loaders.py  test_metric_meta_hotfix.py  test_model_root_walk.py  test_preflight.py  test_sidecars_slices.py  test_signals.py  test_slice_grouping.py  test_slugs.py  test_stage_a_cards.py  test_stage_a_drops.py  test_stage_c_slice.py  test_stage_cache.py  test_stage_j_eval_results_view.py  test_stage_j_evals_view.py  test_stage_j_models_view.py  test_stage_j_sidecars.py  test_stage_j_warehouse.py  test_taxonomy.py  test_udf_roundtrip.py
tests/fixtures/: build_fixtures.py
(+30 files in other folders)
