[project]
name = "eval-card-backend"
version = "0.0.1"
description = "Materializes evaluation artifacts from evaleval/EEE_datastore and evaleval/auto-benchmarkcards."
requires-python = ">=3.11"
dependencies = [
    "huggingface_hub>=0.24",
]

[project.scripts]
eval-card-backend = "eval_card_backend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_card_backend"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "jupyterlab>=4",
    "pandas>=2",
]
